--- a/addons/game_config_dock/plugin.cfg
+++ b/addons/game_config_dock/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="Game Config Save Load Dock"
+name="Game Config Dock"
 description="A custom dock made so I can learn how to make plugins."
 author="Your Name Here"
 version="1.0"
-script="custom_dock.gd"
+script="game_config_dock.gd"
